
* Upgrade will now use a sensible default format if the source repository
  uses rich roots.  (Jelmer Vernooij, #252908)

Documentation
*************

* Expanded the index of the developer documentation. (Eric Siegerman)

* New topic `bzr help debug-flags`.  (Martin Pool)

* The generated manpage now explicitly lists aliases as commands.
  (James Westby, #336998)

API Changes
***********

* APIs deprecated in 1.6 and previous verisons of bzr are now removed.
  (Martin Pool)

* ``CommitReporter`` is no longer called with ``unchanged`` status during
  commit - this was a full-tree overhead that bzr no longer performs.
  (Robert Collins)

* New API ``Inventory.filter()`` added that filters an inventory by
  a set of file-ids so that only those fileids, their parents and
  their children are included.  (Ian Clatworthy)

* New sort order for ``get_record_stream`` ``groupcompress`` which
  sorts optimally for use with groupcompress compressors. (John Arbash
  Meinel, Robert Collins)

* Repository APIs ``get_deltas_for_revisions()`` and
  ``get_revision_delta()`` now support an optional ``specific_fileids``
  parameter. If provided, the deltas are filtered so that only those
  file-ids, their parents and their children are included.
  (Ian Clatworthy)

* The ``get_credentials`` and ``set_credentials`` methods of 
  ``AuthenticationConfig`` now accept an optional realm argument.
  (Jean-Francois Roy)

* The ``pb`` argument to ``fetch()`` is deprecated.
  (Martin Pool)

* The smart server jail now hooks into BzrDir.open to prevent any BzrDir
  that is not inside the backing transport from being opened.  See the
  module documentation for ``bzrlib.smart.request`` for details.
  (Andrew Bennetts, Robert Collins)

* ``Tree.get_symlink_target`` now always returns a unicode string result
  or None. Previously it would return the bytes from reading the link
  which could be in any arbitrary encoding. (Robert Collins)

Testing
*******
