@@ -1,4 +1,4 @@
-# Copyright (C) 2005, 2006 Canonical Ltd
+# Copyright (C) 2005, 2006, 2009 Canonical Ltd
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,12 +14,15 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
+
 """Inventory/revision serialization."""
+
 
 from bzrlib import registry
 
+
 class Serializer(object):
-    """Abstract object serialize/deserialize"""
+    """Inventory and revision serialization/deserialization."""
 
     def write_inventory(self, inv, f):
         """Write inventory to a file"""
