@@ -492,18 +492,6 @@ class TestSerializer(TestCase):
 
         self.assertEqual(len(expected), len(actual))
 
-    def test_registry(self):
-        self.assertIs(serializer_v4,
-                      serializer.format_registry.get('4'))
-        self.assertIs(bzrlib.xml5.serializer_v5,
-                      serializer.format_registry.get('5'))
-        self.assertIs(bzrlib.xml6.serializer_v6,
-                      serializer.format_registry.get('6'))
-        self.assertIs(bzrlib.xml7.serializer_v7,
-                      serializer.format_registry.get('7'))
-        self.assertIs(bzrlib.xml8.serializer_v8,
-                      serializer.format_registry.get('8'))
-
 
 class TestEncodeAndEscape(TestCase):
     """Whitebox testing of the _encode_and_escape function."""
